[gd_scene load_steps=4 format=3 uid="uid://jhomeys3bfhg"]

[ext_resource type="Script" uid="uid://u46bcxk0kgsh" path="res://scripts/connect_menu.gd" id="1_7571w"]
[ext_resource type="PackedScene" uid="uid://dga37kf5dchc3" path="res://shaders/backgrounds/online.tscn" id="2_kvax6"]
[ext_resource type="Theme" uid="uid://cqxlyubx3gcf" path="res://themes/online_menu.tres" id="3_kvax6"]

[node name="connect_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7571w")

[node name="online_background" parent="." instance=ExtResource("2_kvax6")]

[node name="Tabs" type="TabContainer" parent="."]
layout_mode = 0
offset_right = 96.0
offset_bottom = 97.0
theme = ExtResource("3_kvax6")
tab_alignment = 1
current_tab = 0

[node name="IP" type="Control" parent="Tabs"]
layout_mode = 2
metadata/_tab_index = 0

[node name="IP" type="VBoxContainer" parent="Tabs/IP"]
layout_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 4.0
offset_bottom = -3.0
theme_override_constants/separation = 1

[node name="ip" type="LineEdit" parent="Tabs/IP/IP"]
layout_mode = 2
theme = ExtResource("3_kvax6")
text = "127.0.0.1"
placeholder_text = "ip address"

[node name="port" type="LineEdit" parent="Tabs/IP/IP"]
layout_mode = 2
theme = ExtResource("3_kvax6")
text = "5835"
placeholder_text = "port"

[node name="buttons" type="HBoxContainer" parent="Tabs/IP"]
layout_mode = 2
offset_left = -2.0
offset_top = 57.0
offset_right = 97.0
offset_bottom = 77.0
alignment = 1

[node name="connect" type="Button" parent="Tabs/IP/buttons"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme = ExtResource("3_kvax6")
text = "CONNECT"

[node name="host" type="Button" parent="Tabs/IP/buttons"]
custom_minimum_size = Vector2(35, 0)
layout_mode = 2
theme = ExtResource("3_kvax6")
text = "HOST"

[node name="Steam" type="Control" parent="Tabs"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="buttons" type="VBoxContainer" parent="Tabs/Steam"]
layout_mode = 0
offset_left = 20.0
offset_top = 18.0
offset_right = 76.0
offset_bottom = 58.0

[node name="steam_host" type="Button" parent="Tabs/Steam/buttons"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2
text = "Host"

[node name="steam_quick_match" type="Button" parent="Tabs/Steam/buttons"]
layout_mode = 2
disabled = true
text = "Quick Match"

[node name="steam_server_list" type="Button" parent="Tabs/Steam/buttons"]
layout_mode = 2
disabled = true
text = "Server List"

[connection signal="pressed" from="Tabs/IP/buttons/connect" to="." method="_on_connect_pressed"]
[connection signal="pressed" from="Tabs/IP/buttons/host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="Tabs/Steam/buttons/steam_host" to="." method="_on_steam_host_pressed"]
